FIX: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   overscroll-behavior: none;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 .header-logo {
   align-items: center;
   display: flex;
